--- a/login.html
+++ b/login.html
@@ -13,24 +13,26 @@
     <div class="wrapper">
         <header>
             <div class="container">
-                <div class="row">
-                    <div class="col-sm">
+                <div class="row justify-content-center">
+                    <div class="col">
                         <img src="assets/images/logo.png" alt="image of the phillers logo">
                     </div>
                     <hr>
-                    <div class="col-sm">
-                        <nav class="nav">
-                            <ul class="list-inline">
-                                <li class="list-inline-item"><a href="/" class="nav-link"> Home</a></li>
-                                <li class="list-inline-item"><a href="/profile.html" class="nav-link"> Profile</a></li>
-                                <li class="list-inline-item"><a href="/login.html" class="nav-link">Log in</a></li>
+                    <div class="row mb-4">
+                      <div class="col-12">
+                        <nav class="nav align-items-center">
+                            <ul class="list-inline col-12 col-md-8 align-self-start d-flex justify-content-start">
+                                <li class="list-inline-item col-md-3 col-sm-4 col-4"><a href="/" class="nav-link p-0"> Home</a></li>
+                                <li class="list-inline-item col-md-3 col-sm-4 col-4"><a href="/login.html" class="nav-link p-0 text-active text-decoration-underline">Log in</a></li>
+                                <li class="list-inline-item col-md-3 col-sm-4 col-4"><a href="/profile.html" class="nav-link p-0"> Profile</a></li>
                             </ul>
-                            <div class="input-group">
-                                <input type="search" id="form1" class="form-control" />
+                            <div class="input-group col">
+                                <input type="search" id="form1" class="form-control col-1" />
                                 <button type="button" class="btn btn-primary">
                                     <span class="fas fa-search"></span>
                                 </button>
                             </div>
+                          </div>
                         </nav>  
                     </div>
                 </div>
