--- a/profile.html
+++ b/profile.html
@@ -11,47 +11,49 @@
 </head>
 <body>
     <div class="wrapper">
-        <header>
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm">
-                        <img src="assets/images/logo.png" alt="image of the phillers logo">
-                    </div>
-                    <hr>
-                    <div class="col-sm">
-                        <nav class="nav">
-                            <ul class="list-inline">
-                                <li class="list-inline-item"><a href="index.html" class="nav-link"> Home</a></li>
-                                <li class="list-inline-item"><a href="profile.html" class="nav-link"> Profile</a></li>
-                                <li class="list-inline-item"><a href="login.html" class="nav-link">Log in</a></li>
-                            </ul>
-                            <div class="input-group">
-                                <input type="search" id="form1" class="form-control" />
-                                <button type="button" class="btn btn-primary">
-                                    <span class="fas fa-search"></span>
-                                </button>
-                            </div>
-                        </nav>  
-                    </div>
+      <header>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col">
+                    <img src="assets/images/logo.png" alt="image of the phillers logo">
+                </div>
+                <hr>
+                <div class="row mb-4">
+                  <div class="col-12">
+                    <nav class="nav align-items-center">
+                        <ul class="list-inline col-12 col-md-8 align-self-start d-flex justify-content-start">
+                            <li class="list-inline-item col-md-3 col-sm-4 col-4"><a href="/" class="nav-link p-0"> Home</a></li>
+                            <li class="list-inline-item col-md-3 col-sm-4 col-4"><a href="/login.html" class="nav-link p-0">Log in</a></li>
+                            <li class="list-inline-item col-md-3 col-sm-4 col-4"><a href="/profile.html" class="nav-link p-0 text-active text-decoration-underline"> Profile</a></li>
+                        </ul>
+                        <div class="input-group col">
+                            <input type="search" id="form1" class="form-control col-1" />
+                            <button type="button" class="btn btn-primary">
+                                <span class="fas fa-search"></span>
+                            </button>
+                        </div>
+                      </div>
+                    </nav>  
                 </div>
             </div>
-        </header>
+        </div>
+    </header>
         <main>
-            <div class="container">
+            <div class="container m-0">
                 <div class="row">
-                    <div class="profile-main-left">
-                        <h3 class="display-3">phm</h3>
-                        <img src="assets/images/moi.jpg" alt="profile picture of user" class="rounded-circle">
+                  <div class="profile-main-left text-white col-12 col-md-4 mt-2 justify-content-center text-center h-100 py-3">
+                        <h3 class="display-3 text-white text-uppercase mt-2">phm</h3>
+                        <img src="assets/images/moi.jpg" alt="profile picture of user" class="rounded-circle my-3">
                         <div class="d-flex justify-content-center">
                             <div class="row">
                                 <div class="text-center">
                                     <h4>About me</h4>
                                 </div>
                                 <ul class="list-unstyled">
-                                    <li class="list-item"><h6>Name</h6> <p class="p-style lead border-bottom">Phillip Mikalsen</p></li>
-                                    <li class="list-item"><h6>From</h6> <p class="p-style lead border-bottom">Norway</p></li>
-                                    <li class="list-item"><h6>Work</h6><p class="p-style lead border-bottom">Developer</p></li>
-                                    <li class="list-item"><h6>Hobbies</h6><p class="p-style lead border-bottom">Gaming <br> Series <br> Development</p></li>
+                                    <li class="list-item"><h6>Name</h6> <p class="p-style lead border-bottom text-primary">Phillip Mikalsen</p></li>
+                                    <li class="list-item"><h6>From</h6> <p class="p-style lead border-bottom text-primary">Norway</p></li>
+                                    <li class="list-item"><h6>Work</h6><p class="p-style lead border-bottom text-primary">Developer</p></li>
+                                    <li class="list-item"><h6>Hobbies</h6><p class="p-style lead border-bottom text-primary">Gaming <br> Series <br> Development</p></li>
                                 </ul>
                                 <div class="text-center">
                                     <h4>Contacts</h4>
@@ -64,7 +66,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col col-sm">
+                    <div class="col-12 col-md-8 mt-2 ms-0">
                         <div class="card">
                         </div>
                             <div class="card shadow-0">
@@ -100,11 +102,11 @@
                                         <div class="d-flex w-100 ps-3">
                                           <div>
                                             <a href="/profile.html">
-                                              <h6 class="text-body">
+                                              <h6 class="text-body text-uppercase">
                                                 randomHero
-                                                <span class="small text-muted font-weight-normal">@randomHero</span>
-                                                <span class="small text-muted font-weight-normal"> • </span>
-                                                <span class="small text-muted font-weight-normal">30m ago</span>
+                                                <span class="small text-muted font-weight-normal text-lowercase">@randomHero</span>
+                                                <span class="small text-muted font-weight-normal text-lowercase"> • </span>
+                                                <span class="small text-muted font-weight-normal text-lowercase">30m ago</span>
                                               </h6>
                                             </a>
                                             <p style="line-height: 1.2;">
@@ -115,12 +117,12 @@
                                             </p>
                                             <ul class="list-unstyled d-flex justify-content-between mb-0 pe-xl-5">
                                               <li>
-                                                <span class="far fa-comment"></span>
+                                                <span class="far fa-comment text-primary"></span>
                                               </li>
                                               <li>
-                                                <span class="far fa-heart"></span><span class="small ps-2">31</span></li>
+                                                <span class="far fa-heart text-red"></span><span class="small ps-2">31</span></li>
                                               <li>
-                                                <span class="far fa-share-square"></span>
+                                                <span class="far fa-share-square text-primary"></span>
                                               </li>
                                             </ul>
                                           </div>
@@ -132,11 +134,11 @@
                                         <div class="d-flex w-100 ps-3">
                                           <div>
                                             <a href="/profile.html">
-                                              <h6 class="text-body">
+                                              <h6 class="text-body text-uppercase">
                                                 Lislerud
-                                                <span class="small text-muted font-weight-normal">@Lislerud</span>
-                                                <span class="small text-muted font-weight-normal"> • </span>
-                                                <span class="small text-muted font-weight-normal">2h ago</span>
+                                                <span class="small text-muted font-weight-normal text-lowercase">@Lislerud</span>
+                                                <span class="small text-muted font-weight-normal text-lowercase"> • </span>
+                                                <span class="small text-muted font-weight-normal text-lowercase">2h ago</span>
                                               </h6>
                                             </a>
                                             <p style="line-height: 1.2;">
@@ -147,12 +149,12 @@
                                             </p>
                                             <ul class="list-unstyled d-flex justify-content-between mb-0 pe-xl-5">
                                               <li>
-                                                <span class="far fa-comment"></span>
+                                                <span class="far fa-comment text-primary"></span>
                                               </li>
                                               <li>
-                                                <span class="far fa-heart"></span><span class="small ps-2">38</span></li>
+                                                <span class="far fa-heart text-red"></span><span class="small ps-2">38</span></li>
                                               <li>
-                                                <span class="far fa-share-square"></span>
+                                                <span class="far fa-share-square text-primary"></span>
                                               </li>
                                             </ul>
                                           </div>
@@ -164,11 +166,11 @@
                                         <div class="d-flex w-100 ps-3">
                                           <div>
                                             <a href="/profile.html">
-                                              <h6 class="text-body">
+                                              <h6 class="text-body text-uppercase">
                                                 OlivKing
-                                                <span class="small text-muted font-weight-normal">@OlivKing</span>
-                                                <span class="small text-muted font-weight-normal"> • </span>
-                                                <span class="small text-muted font-weight-normal">1h ago</span>
+                                                <span class="small text-muted font-weight-normal text-lowercase">@OlivKing</span>
+                                                <span class="small text-muted font-weight-normal text-lowercase"> • </span>
+                                                <span class="small text-muted font-weight-normal text-lowercase">1h ago</span>
                                               </h6>
                                             </a>
                                             <p style="line-height: 1.2;">
@@ -179,12 +181,12 @@
                                             </p>
                                             <ul class="list-unstyled d-flex justify-content-between mb-0 pe-xl-5">
                                               <li>
-                                                <span class="far fa-comment"></span>
+                                                <span class="far fa-comment text-primary"></span>
                                               </li>
                                               <li>
-                                                <span class="far fa-heart"></span><span class="small ps-2">50</span></li>
+                                                <span class="far fa-heart text-red"></span><span class="small ps-2">50</span></li>
                                               <li>
-                                                <span class="far fa-share-square"></span>
+                                                <span class="far fa-share-square text-primary"></span>
                                               </li>
                                             </ul>
                                           </div>
