Updated commented feedback

--- a/profile.html
+++ b/profile.html
@@ -21,11 +21,13 @@
                 <div class="row mb-4">
                   <div class="col-12">
                     <nav class="nav align-items-center">
-                        <ul class="list-inline col-12 col-md-8 align-self-start d-flex justify-content-start">
-                            <li class="list-inline-item col-md-3 col-sm-4 col-4"><a href="/" class="nav-link p-0"> Home</a></li>
-                            <li class="list-inline-item col-md-3 col-sm-4 col-4"><a href="/login.html" class="nav-link p-0">Log in</a></li>
-                            <li class="list-inline-item col-md-3 col-sm-4 col-4"><a href="/profile.html" class="nav-link p-0 text-active text-decoration-underline"> Profile</a></li>
-                        </ul>
+                      <div class="col-12 col-md-8">
+                          <ul class="list-inline align-self-start d-flex justify-content-start">
+                              <li class="list-inline-item col-md-3 col-sm-4 col-4"><a href="/" class="nav-link p-0"> Home</a></li>
+                              <li class="list-inline-item col-md-3 col-sm-4 col-4"><a href="/login.html" class="nav-link p-0">Log in</a></li>
+                              <li class="list-inline-item col-md-3 col-sm-4 col-4"><a href="/profile.html" class="nav-link p-0 text-active text-decoration-underline"> Profile</a></li>
+                          </ul>
+                      </div>
                         <div class="input-group col">
                             <input type="search" id="form1" class="form-control col-1" />
                             <button type="button" class="btn btn-primary">
