--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
                     <div class="row mb-4">
                       <div class="col-12">
                         <nav class="nav align-items-center">
-                            <ul class="list-inline col-12 col-md-8 align-self-start d-flex justify-content-start">
+                          <div class="col-12 col-md-8">
+                            <ul class="list-inline align-self-start d-flex justify-content-start">
                                 <li class="list-inline-item col-md-3 col-sm-4 col-4"><a href="/" class="nav-link p-0 text-active text-decoration-underline"> Home</a></li>
                                 <li class="list-inline-item col-md-3 col-sm-4 col-4"><a href="/login.html" class="nav-link p-0">Log in</a></li>
                                 <li class="list-inline-item col-md-3 col-sm-4 col-4"><a href="/profile.html" class="nav-link p-0"> Profile</a></li>
                             </ul>
+                          </div>
                             <div class="input-group col">
                                 <input type="search" id="form1" class="form-control col-1" />
                                 <button type="button" class="btn btn-primary">
@@ -40,7 +42,7 @@
         </header>
         <main>
             <section class="user-posts">
-                <div class="container m-0">
+                <div class="container">
                     <div class="row">
                         <div class="profile-main-left text-white col-12 col-md-4 mt-2 justify-content-center text-center h-100 py-3">
                             <a href="/profile.html" class="profile-link text-uppercase mt-2">Phm</a>
@@ -244,9 +246,7 @@
             </section>
         </main>
         <footer>
-          <div class="footer">
             &copy;Phillers
-        </div>
         </footer>
     </div>
 </body>
