--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="wrapper">
         <header>
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row justify-content-center">
                     <div class="col">
                         <img src="assets/images/logo.png" alt="image of the phillers logo">
@@ -42,7 +42,7 @@
         </header>
         <main>
             <section class="user-posts">
-                <div class="container">
+                <div class="container-fluid">
                     <div class="row">
                         <div class="profile-main-left text-white col-12 col-md-4 mt-2 justify-content-center text-center h-100 py-3">
                             <a href="/profile.html" class="profile-link text-uppercase mt-2">Phm</a>
