--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@
 <body>
     <div class="wrapper">
       <header>
-        <div class="container">
+        <div class="container-fluid">
             <div class="row justify-content-center">
                 <div class="col">
                     <img src="assets/images/logo.png" alt="image of the phillers logo">
@@ -41,7 +41,7 @@
         </div>
     </header>
         <main>
-            <div class="container m-0">
+            <div class="container-fluid">
                 <div class="row">
                   <div class="profile-main-left text-white col-12 col-md-4 mt-2 justify-content-center text-center h-100 py-3">
                         <h3 class="display-3 text-white text-uppercase mt-2">phm</h3>
